fix(theme): fix duplicate white spaces (#193)

--- a/packages/abc/page-header/style/index.less
+++ b/packages/abc/page-header/style/index.less
@@ -53,14 +53,6 @@
   &__action {
     margin-left: 56px;
     min-width: 266px;
-    nz-popconfirm:not(:last-child),
-    .ant-btn-group:not(:last-child),
-    .ant-btn:not(:last-child) {
-      margin-right: 8px;
-    }
-    .ant-btn-group > .ant-btn {
-      margin-right: 0;
-    }
   }
 
   &__title,
