--- a/packages/theme/styles/app/antd/_preserve-white-spaces.less
+++ b/packages/theme/styles/app/antd/_preserve-white-spaces.less
@@ -12,7 +12,9 @@
   .ant-btn + .ant-btn,
   .ant-btn + nz-popconfirm,
   nz-popconfirm + .ant-btn,
-  nz-popconfirm + nz-popconfirm {
+  nz-popconfirm + nz-popconfirm,
+  .ant-btn + nz-button-group,
+  nz-popconfirm + nz-button-group {
     margin-left: @button-and-button-white-spacing;
   }
   .ant-btn-group {
